fixed the delay of switching the background color of the input label when dark mode is activated

--- a/src/styles/formInput.module.css
+++ b/src/styles/formInput.module.css
@@ -36,7 +36,7 @@
     font-size: 13px;
     font-weight: 600;
     background-color: white;
-    transition: all .2s ease-out;
+    transition: top .2s ease-out;
 }
 
 .inputWrapper {
